--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,4 +9,4 @@ services:
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_PASSWORD: root
