--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "google-auth-library": "^8.7.0",
+    "graphql": "^16.6.0",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
