--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "google-auth-library": "^8.7.0",
     "graphql": "^16.6.0",
     "mongoose": "^6.8.2",
@@ -39,6 +41,7 @@
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -75,7 +78,15 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!main.(t|j)s",
+      "!**/*.module.(t|j)s",
+      "!**/*.input.(t|j)s",
+      "!**/*.entity.(t|j)s",
+      "!**/*.schema.(t|j)s",
+      "!**/*.type.(t|j)s",
+      "!**/configuration.ts",
+      "!**/dto/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
