--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest.config.ts --detectOpenHandles"
   },
   "dependencies": {
     "@apollo/server": "^4.3.0",
@@ -35,6 +35,7 @@
     "class-validator": "^0.14",
     "google-auth-library": "^8.7.0",
     "graphql": "^16.6.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -60,10 +61,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.2",
+    "mongodb-memory-server": "^8.11.4",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.5",
+    "ts-jest": "^28.0.8",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.2",
     "tsconfig-paths": "^4.0.0",
