--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest.config.ts --detectOpenHandles"
+    "test:e2e": "jest --config ./test/jest.config.ts --detectOpenHandles --runInBand"
   },
   "dependencies": {
     "@apollo/server": "^4.3.0",
     "@casl/ability": "^6.3.3",
-    "@nestjs/apollo": "^10.1.7",
+    "@nestjs/apollo": "^10.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "apollo-server-express": "^3.11.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14",
     "google-auth-library": "^8.7.0",
@@ -50,7 +51,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.4",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.0.3",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
@@ -60,12 +61,12 @@
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.2",
+    "jest": "^29.4.2",
     "mongodb-memory-server": "^8.11.4",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.2",
     "tsconfig-paths": "^4.0.0",
