--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest.config.ts --detectOpenHandles --runInBand"
   },
   "dependencies": {
+    "@apollo/server": "^4.3.0",
+    "@casl/ability": "^6.3.3",
+    "@nestjs/apollo": "^10.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -28,10 +31,12 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "apollo-server-express": "^3.11.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14",
     "google-auth-library": "^8.7.0",
     "graphql": "^16.6.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -46,7 +51,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.4",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.0.3",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
@@ -56,39 +61,15 @@
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.2",
+    "jest": "^29.4.2",
+    "mongodb-memory-server": "^8.11.4",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.5",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.2",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s",
-      "!main.(t|j)s",
-      "!**/*.module.(t|j)s",
-      "!**/*.input.(t|j)s",
-      "!**/*.entity.(t|j)s",
-      "!**/*.schema.(t|j)s",
-      "!**/*.type.(t|j)s",
-      "!**/configuration.ts",
-      "!**/dto/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
